--- a/public/daily.html
+++ b/public/daily.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><!-- Basic Page Needs
-    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<head>
     <meta charset="utf-8">
     <title>Miner Dashboard</title>
     <meta name="description" content="">
@@ -29,6 +28,7 @@
 </head>
 <body>
     <div class="container">
+
         <div class="row" style=" margin-top: 5%;">
             <div class="column">
                 <h2 style="display: inline;">BattleMoira</h2>
@@ -50,73 +50,30 @@
                 <a class="link" href="https://etherscan.io/address/0xedD0CaF72bC3bc30c185Db4066a55102eD54A01F">
                     <h6 style="display: inline;">Wallet</h6>
                 </a>
-                <a class="link" href="/stats">
-                    <h6 style="display: inline;">Stats</h6>
+                <a class="link" href="/">
+                    <h6 style="display: inline;">Dashboard</h6>
                 </a>
-                <p class="link" style="display: inline; margin-right: 20px; font-size: 2rem; margin-top: 0;" id="ticker"></p>
+                <p class="link" style="display: inline; margin-right: 20px; font-size: 2rem; margin-top: 0;" id="ticker">£</p>
             </div>
         </div>
 
-        <div class="row" style="margin-top: 50px;">
-            <div class="five columns" style="text-align: left; margin-top: 15%;">
-                <div class="item">
-                    <p style="display: inline;">Wallet Balance </p>
-                    <h6 id="walbal" style="display: inline; padding-left: 10px;"></h6>
-                </div>
-                <div class="item">
-                    <p style="display: inline;">Pool Balance </p>
-                    <h6 id="poolbal" style="display: inline; padding-left: 10px;"></h6>
-                </div>
-                <div class="item">
-                    <p style="display: inline;">Current Price  </p>
-                    <h6 id="price" style="display: inline; padding-left: 10px;"></h6>
-                </div>
-                <div class="item">
-                    <p style="display: inline;">Current Hashrate  </p>
-                    <h6 id="hash" style="display: inline; padding-left: 10px;"></h6>
-                </div>
-            </div>
-
-            <div class="seven columns" style="text-align: center;">
-                <h5>Wallet Balance Split</h5>
-                <canvas id="myChart" width="600" height="400"></canvas>
-            </div>
-        </div>
-    </div>
-    
-    <div class="container" style="margin-top: 20px;">
-        <div class="row">
-            <div class="six columns" style="margin-top: 3%; display: inline;">
-                <h4>Workers</h4>
+        <div class="row" style="margin-top: 30px;">
+            <h4>Worker Stats</h4>
                 <table style="width: 100%;">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Valid</th>
-                            <th>Stale</th>
-                            <th>Online</th>
-                        </tr>
-                    </thead>
-                    <tbody id="workertable"></tbody>
-                </table>
-            </div>
-            <div class=" six columns" style="margin-top: 3%; display: inline;">
-                <h4>Payments</h4>
-                <table style="width: 100%;">
-                    <thead>
-                        <tr>
-                            <th>Date</th>
-                            <th>Amount</th>
-                            <th>Value</th>
-                            <th>Price</th>
-                        </tr>
-                    </thead>
-                    <tbody id="paymentstable"></tbody>
-                </table>
-            </div>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Valid</th>
+                    <th>Stale</th>
+                    <th>Share</th>
+                    <th>Online</th>
+                </tr>
+            </thead>
+            <tbody id="workertable"></tbody>
+        </table>
         </div>
         <div class="row">
-            <div class="column" style="margin-top: 3%;">
+            <div class="six columns">
                 <h4>Daily Returns</h4>
                 <table style="width: 100%;">
                     <thead>
@@ -130,14 +87,24 @@
                     <tbody id="rewardstable"></tbody>
                 </table>
             </div>
-        </div>
-            <div class="row">
-            <canvas id="historyChart" width="400px" height="200px"></canvas>
-
+            <div class="six columns">
+                <h4>Payments</h4>
+            <table style="width: 100%;">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Amount</th>
+                        <th>Value</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody id="paymentstable"></tbody>
+            </table>
+                
             </div>
+            <!-- <script src="/js/dashchart.js"></script> -->
+            <script src="/js/index.js"></script>
         </div>
-        <script src="/js/dashchart.js"></script>
-        <script src="/js/index.js"></script>
     </div>
 </body>
 </html>
