--- a/public/index.html
+++ b/public/index.html
@@ -94,6 +94,7 @@
                             <th>Name</th>
                             <th>Valid</th>
                             <th>Stale</th>
+                            <th>Share</th>
                             <th>Online</th>
                         </tr>
                     </thead>
