changed navigation and split charts.

--- a/public/index.html
+++ b/public/index.html
@@ -32,16 +32,16 @@
         <div class="row" style=" margin-top: 5%;">
             <div class="column">
                 <h2 style="display: inline;">BattleMoira</h2>
-                <a class="link" href="/json">
+                <!-- <a class="link" href="/json">
                     <h6 style="display: inline;">Json</h6>
-                </a>
+                </a> -->
                 
                 <!-- <a class="link" href="https://www.coingecko.com/en/coins/ethereum">
                     <h6 style="display: inline;">Gecko</h6>
                 </a> -->
-                <a class="link" href="https://uk.finance.yahoo.com/quote/ETH-GBP/history?p=ETH-GBP">
+                <!-- <a class="link" href="https://uk.finance.yahoo.com/quote/ETH-GBP/history?p=ETH-GBP">
                     <h6 style="display: inline;">Price History</h6>
-                </a>
+                </a> -->
                 
                 <a class="link" href="https://flexpool.io/0xedD0CaF72bC3bc30c185Db4066a55102eD54A01F">
                     <h6 style="display: inline;">Pool</h6>
@@ -79,7 +79,7 @@
 
             <div class="seven columns" style="text-align: center;">
                 <h5>Wallet Balance Split</h5>
-                <canvas id="myChart" width="600" height="400"></canvas>
+                <canvas id="pieChart" width="600" height="400"></canvas>
             </div>
         </div>
     </div>
@@ -134,6 +134,7 @@
         </div>
             <div class="row">
             <canvas id="historyChart" width="400px" height="200px"></canvas>
+            <canvas id="luckChart" width="400px" height="200px"></canvas>
 
             </div>
         </div>
