--- a/public/stats.html
+++ b/public/stats.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="row" style="margin-top: 30px;">
-            <h4>Worker Stats</h4>
+            <h4>Current Workers</h4>
                 <table style="width: 100%;">
             <thead>
                 <tr>
@@ -103,6 +103,24 @@
             </div>
             <!-- <script src="/js/dashchart.js"></script> -->
             <script src="/js/index.js"></script>
+        </div>
+        <div class="row">
+            <div class="column">
+                <h4>Worker History</h4>
+                <table style="width: 100%;">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Rig</th>
+                            <th>Andras</th>
+                            <th>Callum</th>
+                            <th>Mark</th>
+                            <th>Total</th>
+                        </tr>
+                    </thead>
+                    <tbody id="workhisttable"></tbody>
+                </table>
+            </div>
         </div>
     </div>
 </body>
