--- a/public/stats.html
+++ b/public/stats.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="/css/skeleton.css">
     <!-- <link rel="stylesheet" href="/css/skeleton_colours.css"> -->
     <link rel="stylesheet" href="/css/Chart.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+
 
     <!-- JS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
