--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="/css/skeleton.css">
     <!-- <link rel="stylesheet" href="/css/skeleton_colours.css"> -->
     <link rel="stylesheet" href="/css/Chart.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
     <!-- JS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
