--- a/public/stats.html
+++ b/public/stats.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta
+    __________________________________________________ -->
     <meta charset="utf-8">
     <title>Miner Dashboard</title>
     <meta name="description" content="">
@@ -19,10 +21,8 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/skeleton.css">
-    <!-- <link rel="stylesheet" href="/css/skeleton_colours.css"> -->
     <link rel="stylesheet" href="/css/Chart.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-
 
     <!-- JS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -30,7 +30,6 @@
 </head>
 <body>
     <div class="container">
-
         <div class="row" style=" margin-top: 5%;">
             <div class="column">
                 <h2 style="display: inline;">BattleMoira</h2>
@@ -58,6 +57,7 @@
             </div>
         </div>
 
+
         <div class="row" style="margin-top: 30px;">
             <h4>Current Workers</h4>
                 <table style="width: 100%;">
@@ -73,6 +73,8 @@
             <tbody id="workertable"></tbody>
         </table>
         </div>
+
+
         <div class="row">
             <div class="six columns">
                 <h4>Daily Returns</h4>
@@ -106,6 +108,8 @@
             <!-- <script src="/js/dashchart.js"></script> -->
             <script src="/js/index.js"></script>
         </div>
+
+
         <div class="row">
             <div class="column">
                 <h4>Worker History</h4>
@@ -124,6 +128,8 @@
                 </table>
             </div>
         </div>
+
+        
     </div>
 </body>
 </html>
