--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
             </div>
         </div>
         <script src="/js/dashchart.js"></script>
-        <script src="/js/index.js"></script>
+        <script src="/js/dashtables.js"></script>
     </div>
 </body>
 </html>
