updated host.js, dashtables.js and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,6 @@
                             <th>Valid</th>
                             <th>Stale</th>
                             <th>Share</th>
-                            <th>Online</th>
                         </tr>
                     </thead>
                     <tbody id="workertable"></tbody>
@@ -126,7 +125,7 @@
 
             <div class="row">
                 <canvas id="historyChart" width="400px" height="200px"></canvas>
-                <canvas id="luckChart" width="400px" height="200px"></canvas>
+                <!-- <canvas id="luckChart" width="400px" height="200px"></canvas> -->
             </div>
         </div>
         <script src="/js/dashchart.js"></script>
