update to ethermine

--- a/public/hist.html
+++ b/public/hist.html
@@ -34,11 +34,11 @@
             <div class="column">
                 <h2 class="inline">History</h2>
 
-                <a class="link" href="https://flexpool.io/0xedD0CaF72bC3bc30c185Db4066a55102eD54A01F">
+                <a class="link" href="https://ethermine.org/miners/d1c6ddd842180cd54eee389aa1302bcaf55fa44a/dashboard">
                     <h6 class="inline">Pool</h6>
                 </a>
-                <a class="link" href="https://etherscan.io/address/0xedD0CaF72bC3bc30c185Db4066a55102eD54A01F">
-                    <h6 class="inline">Wallet</h6>
+                <a class="link" href="https://growing.fi/"">
+                    <h6 class="inline">Staking</h6>
                 </a>
                 <a class="link" href="/projections">
                     <h6 class="inline">Projections</h6>
@@ -46,7 +46,7 @@
                 <a class="link" href="/">
                     <h6 class="inline">Dashboard</h6>
                 </a>
-                <p class="link" style="display: inline; margin-right: 20px; font-size: 2rem; margin-top: 0;" id="ticker">£</p>
+                <!-- <p class="link" style="display: inline; margin-right: 20px; font-size: 2rem; margin-top: 0;" id="ticker">£</p> -->
             </div>
         </div>
 
