--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
         <div class="row" style=" margin-top: 5%;">
             <div class="column">
                 <h2 class="inline">Dashboard</h2>
+                <a class="inline" style="color: gray; padding-left: 50px;">0xedD0CaF72bC3bc30c185Db4066a55102eD54A01F</a>
                 <!-- <a class="link" href="/json">
                     <h6 class="inline">Json</h6>
                 </a> -->
@@ -45,12 +46,12 @@
                     <h6 class="inline">Price History</h6>
                 </a> -->
                 
-                <a class="link" href="https://flexpool.io/0xedD0CaF72bC3bc30c185Db4066a55102eD54A01F">
+                <a class="link" href="https://ethermine.org/miners/d1c6ddd842180cd54eee389aa1302bcaf55fa44a/dashboard">
                     <h6 class="inline">Pool</h6>
                 </a>
                 
-                <a class="link" href="https://etherscan.io/address/0xedD0CaF72bC3bc30c185Db4066a55102eD54A01F">
-                    <h6 class="inline">Wallet</h6>
+                <a class="link" href="https://growing.fi">
+                    <h6 class="inline">Staking</h6>
                 </a>
                 <a class="link" href="/projections">
                     <h6 class="inline">Projections</h6>
@@ -58,7 +59,7 @@
                 <a class="link" href="/history">
                     <h6 class="inline">History</h6>
                 </a>
-                <p class="link" style="display: inline; margin-right: 20px; font-size: 2rem; margin-top: 0;" id="ticker"></p>
+                <!-- <p class="link" style="display: inline; margin-right: 20px; font-size: 2rem; margin-top: 0;" id="ticker"></p> -->
             </div>
         </div>
 
