updated pool link

--- a/public/hist.html
+++ b/public/hist.html
@@ -34,7 +34,7 @@
             <div class="column">
                 <h2 class="inline">History</h2>
 
-                <a class="link" href="https://ethermine.org/miners/d1c6ddd842180cd54eee389aa1302bcaf55fa44a/dashboard">
+                <a class="link" href="https://flexpool.io/0xd1c6ddd842180cd54eee389aa1302bcaf55fa44a">
                     <h6 class="inline">Pool</h6>
                 </a>
                 <a class="link" href="https://growing.fi/"">
