--- a/public/proj.html
+++ b/public/proj.html
@@ -36,7 +36,7 @@
                 <div class="column">
                     <h2 style="display: inline;">Projections</h2>
                     
-                    <a class="link" href="https://ethermine.org/miners/d1c6ddd842180cd54eee389aa1302bcaf55fa44a/dashboard">
+                    <a class="link" href="https://flexpool.io/0xd1c6ddd842180cd54eee389aa1302bcaf55fa44a">
                         <h6 class="inline">Pool</h6>
                     </a>
                     
