added href route to exspenses page

--- a/public/hist.html
+++ b/public/hist.html
@@ -43,6 +43,9 @@
                 <a class="link" href="/projections">
                     <h6 class="inline">Projections</h6>
                 </a>
+                <a class="link" href="/exspenses">
+                    <h6 class="inline">Ledger</h6>
+                </a>
                 <a class="link" href="/">
                     <h6 class="inline">Dashboard</h6>
                 </a>
