--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,9 @@
                 <a class="link" href="/projections">
                     <h6 class="inline">Projections</h6>
                 </a>
+                <a class="link" href="/exspenses">
+                    <h6 class="inline">Ledger</h6>
+                </a>
                 <a class="link" href="/history">
                     <h6 class="inline">History</h6>
                 </a>
