--- a/public/proj.html
+++ b/public/proj.html
@@ -44,6 +44,10 @@
                         <h6 class="inline">Staking</h6>
                     </a>
                     
+                    <a class="link" href="/exspenses">
+                        <h6 class="inline">Ledger</h6>
+                    </a>
+                    
                     <a class="link" href="/history">
                         <h6 class="inline">History</h6>
                     </a>
